<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ProjetSupervision</string>
    <string name="action_settings">Settings</string>
    <string name="appTitle">Application de supervision</string>
    <string name="BtnDiskUsage">Consulter l\'usage disque</string>
    <string name="DiskUsageTitle">Utilisation DD:</string>
    <string name="BtnCpuUsage">Consulter l\'usage processeur</string>
    <string name="CpuUsageTitle">Utilisation Processeur:</string>
    <string name="BtnTempUsage">Consulter la température de la baie</string>
    <string name="TempUsageTitle">Température baie:</string>
    <string name="BtnHddStat">Statistique usage du disque dur</string>
    <string name="BtnCpuStat">Statistique usage du processeur</string>
    <string name="BtnTempStat">Statistique de température de la baie</string>
    <string name="pref_cat_serveur_sql">Paramètres du Serveur BDD</string>
    <string name="pref_cat_host_summary_sql">Entrer l\'adresse ou le nom d\'hôte</string>
    <string name="pref_cat_host_title_sql">Serveur SQL Express</string>
    <string name="pref_cat_port_summary_sql">Entrer le port d\'écoute du serveur</string>
    <string name="pref_cat_port_title_sql">Serveur SQL Express</string>
    <string name="pref_cat_username_summary_sql">Entrer le nom du compte autorisé</string>
    <string name="pref_cat_username_title_sql">Nom d\'utilisateur</string>
    <string name="pref_cat_password_summary_sql">Entrer le mot de passe de connexion</string>
    <string name="pref_cat_password_title_sql">Mot de passe</string>
    <string name="pref_cat_serveur_snmp">Paramètres du serveur SNMP</string>
    <string name="pref_cat_host_summary_snmp">Entrer l\'adresse ou le nom d\'hôte</string>
    <string name="pref_cat_host_title_snmp">Agent SNMP V1</string>
    <string name="pref_cat_port_summary_snmp">Entrer le port d\'écoute du serveur</string>
    <string name="pref_cat_port_title_snmp">Agent SNMP v1</string>
    <string name="pref_cat_community_title_snmp">Communauté SNMP en lecture</string>
    <string name="pref_cat_community_summary_snmp">Entrer la communauté SNMP en lecture</string>
    <string name="pref_cat_sonde">Paramètres de la sonde température SNMP</string>
    <string name="pref_cat_host_summary_sonde">Entrer l\'adresse ou le nom d\'hôte</string>
    <string name="pref_cat_host_title_sonde">Agent SNMP V1</string>
    <string name="pref_cat_port_summary_sonde">Entrer le port d\'écoute du serveur</string>
    <string name="pref_cat_port_title_sonde">Agent SNMP v1</string>
    <string name="pref_cat_community_summary_sonde">Entrer la communauté SNMP en lecture</string>
    <string name="pref_cat_community_title_sonde">Communauté SNMP en lecture</string>
    <string name="menu_preferences">Settings</string>
    <string name="tempstattitle">Statistiques des températures</string>
    <string name="imageDescription">imagetempsmll.jpg</string>
    <string name="title_activity_temp">Statistiques de la baie</string>
    <string name="btnGraph">Courbe des statistiques</string>
    <string name="pref_cat_name_title_sql">Nom de la BDD</string>
    <string name="pref_cat_name_summary_sql">Entrer le nom de la BDD</string>
</resources>
