<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/appTitle"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BtnDiskUsage"
        android:id="@+id/BtnDiskUsage"
        android:onClick="onClickBtnDiskUsage"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/DiskUsageTitle"
        android:id="@+id/textView2"
        android:layout_below="@+id/BtnDiskUsage"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/DiskUsageTxt"
        android:layout_below="@+id/BtnDiskUsage"
        android:layout_alignRight="@+id/BtnDiskUsage"
        android:layout_alignEnd="@+id/BtnDiskUsage" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/CpuUsageTitle"
        android:id="@+id/textView3"
        android:layout_below="@+id/BtnCpuUsage"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BtnCpuUsage"
        android:id="@+id/BtnCpuUsage"
        android:onClick="onClickBtnCpuUsage"
        android:layout_below="@+id/textView2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/CpuUsageTxt"
        android:layout_below="@+id/BtnCpuUsage"
        android:layout_alignRight="@+id/BtnCpuUsage"
        android:layout_alignEnd="@+id/BtnCpuUsage" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BtnTempUsage"
        android:id="@+id/BtnTempUsage"
        android:onClick="onClickBtnTempUsage"
        android:layout_below="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/TempUsageTitle"
        android:id="@+id/textView4"
        android:layout_below="@+id/BtnTempUsage"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/TempUsageTxt"
        android:layout_below="@+id/BtnTempUsage"
        android:layout_alignRight="@+id/BtnTempUsage"
        android:layout_alignEnd="@+id/BtnTempUsage" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BtnHddStat"
        android:id="@+id/BtnHddStat"
        android:onClick="onClickBtnHddStat"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/BtnTempUsage"
        android:layout_alignEnd="@+id/BtnTempUsage" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BtnCpuStat"
        android:id="@+id/BtnCpuStat"
        android:onClick="onClickBtnCpuStat"
        android:layout_below="@+id/BtnHddStat"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/BtnHddStat"
        android:layout_alignEnd="@+id/BtnHddStat" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BtnTempStat"
        android:id="@+id/BtnTempStat"
        android:onClick="onClickBtnTempStat"
        android:layout_below="@+id/BtnCpuStat"
        android:layout_alignRight="@+id/BtnCpuStat"
        android:layout_alignEnd="@+id/BtnCpuStat"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>
